--- a/styles/styles.css
+++ b/styles/styles.css
@@ -693,7 +693,11 @@
   .about-container .left-about p {
     padding-left: 0;
   }
-  
+  .footer h2{
+      padding-top: 70px;
+      text-align: center;
+      font-size: 4rem;
+  }
   @media screen and (max-width: 600px) {
     header {
       padding: 0 !important;
